MATE-64 : [FEAT] 메이트 게시글 조회 응답 DTO 필드 추가 (#47)
* MATE-64 : [FEAT] 메이트 게시글 조회 응답 DTO에 myTeamName 추가

* MATE-64 : [FEAT] DTO값 추가에 의한 파라미터 추가

* MATE-64 : [FEAT] DTO값 변경